<resources>
    <string name="app_name">ClassNote</string>
    <string name="action_login">Login</string>
    <string name="hello_world">Hello World!</string>
    <string name="login_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="name_hint">Enter your name</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="action_github">Github Page</string>
    <string name="action_logout">Logout</string>
    <string name="login_true">Logged out</string>
    <string name="login_false">Logged in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_onboard">Sign-up Date:</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_birthdate">Birthdate</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_userID">User ID:</string>
    <string name="prompt_full_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Enter your Email</string>
    <string name="action_back">Back</string>
    <string name="action_save">Save</string>
    <string name="action_profile">Profile</string>
    <string name="action_messaging">Messaging</string>
    <string name="action_classes">Add</string>
    <string name="class_note_1">Class</string>
    <string name="class_note_2">Note</string>
    <string name="welcome_name">Welcome, </string>
    <string name="test_class">Test Class</string>
    <string name="adapter_class_details">Details</string>
    <string name="action_send_message">Send</string>
</resources>

